Complete Railway deployment fix: add server.ts, index.js fallback, and update configs

--- a/safe-space-online-main/backend/package.json
+++ b/safe-space-online-main/backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Safe Space Online Backend",
-  "main": "dist/app.js",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon src/app.ts",
+    "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "start": "npm run build && node dist/app.js",
+    "start": "node dist/server.js",
     "railway": "npm install && npm run build && npm start",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
