--- a/safe-space-online-main/package.json
+++ b/safe-space-online-main/package.json
@@ -2,16 +2,18 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "build": "cd backend && npm run build",
+    "backend:start": "cd backend && npm start",
+    "backend:dev": "cd backend && npm run dev",
     "dev": "vite",
-    "build": "vite build",
     "build:dev": "vite build --mode development",
+    "frontend:build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vercel-build": "vite build",
-    "start": "node server.js"
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
