--- a/safe-space-online-main/package.json
+++ b/safe-space-online-main/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "safe-space-backend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Safe Space - Backend API",
   "type": "module",
   "main": "server.js",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "start": "node server.js",
-    "build": "cd backend && npm run build",
+    "build": "cd backend && npm install && npm run build",
     "dev": "cd backend && npm run dev",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "railway": "npm run build && npm start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
