fix: update index.js and package.json for Railway deployment
- Update index.js to use ES modules and improve error handling
- Update package.json to point to index.js as main entry point
- Add npm version requirement to engines

--- a/safe-space-online-main/package.json
+++ b/safe-space-online-main/package.json
@@ -4,9 +4,10 @@
   "version": "1.0.0",
   "description": "Safe Space - Backend API",
   "type": "module",
-  "main": "server.js",
+  "main": "./index.js",
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   },
   "scripts": {
     "start": "node server.js",
