refactor: complete backend setup for Railway deployment
- Update root package.json with correct configuration
- Improve server.js with better error handling and logging
- Enhance server.ts with MongoDB connection and graceful shutdown
- Fix TypeScript configuration and linting issues
- Update environment variable handling
- Add proper build and start scripts

--- a/safe-space-online-main/backend/package.json
+++ b/safe-space-online-main/backend/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "prepare": "[ -d .git ] && husky install || echo 'Skipping husky install (not a git repository)'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "clean": "rimraf dist"
   },
   "keywords": [
     "mental-health",                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
