--- a/safe-space-online-main/backend/tsconfig.json
+++ b/safe-space-online-main/backend/tsconfig.json
@@ -13,11 +13,15 @@
     "paths": {
       "@models/*": ["./src/models/*"],
       "@controllers/*": ["./src/controllers/*"],
-      "@types/*": ["./src/types/*"]
+      "@types/*": ["./src/types/*"],
+      "@config/*": ["./src/config/*"]
     },
     "typeRoots": ["./node_modules/@types"],
-    "types": ["node"]
+    "types": ["node"],
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "declaration": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
