--- a/safe-space-online-main/package.json
+++ b/safe-space-online-main/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "Safe Space - Backend API",
   "type": "module",
-  "main": "./index.js",
+  "main": "server.js",
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=8.0.0"
